Add start of the logout method
