# handlers/auth_handler.go
@@ -177,3 +177,25 @@ func (s *Server) GetAuthProviderToken(w http.ResponseWriter, r *http.Request, pr
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(response)
 }
+
+func (s *Server) PostAuthProviderLogout(w http.ResponseWriter, r *http.Request, provider string) {
+	_, exists := config.Providers[provider]
+	if !exists {
+		http.Error(w, "Unsupported provider", http.StatusBadRequest)
+		return
+	}
+
+	sessionCookie, err := r.Cookie("session_id")
+	if err != nil || sessionCookie.Value == "" {
+		http.Error(w, "Session ID is required", http.StatusBadRequest)
+		return
+	}
+
+	err = services.DeleteAuthToken(sessionCookie.Value, provider)
+	if err != nil {
+		http.Error(w, "Unable to logout", http.StatusBadRequest)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
